# smallpt-mpi

./: CMakeLists.txt  README.md
src/: main.cpp
